# rules_vulkan

./: .bazelrc  .editorconfig  BUILD  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json  presubmit.yml
.github/: dependabot.yml
.github/workflows/: app_wrapper.cmd  ci.yml  claude.yml  docs.yml  publish.yml  release.yml  update.yml
docs/: BUILD  docs_hub.bzl  index.md
e2e/gazelle_plugin/: BUILD  MODULE.bazel  test.hlsl
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  main.c  metadata.bzl  shader.glsl  shader.hlsl  volk_test.c
examples/hello/: BUILD  MODULE.bazel  shader.hlsl
glsl/: BUILD  rules.bzl  shader.bzl  toolchain.bzl
hlsl/: BUILD  rules.bzl  shader.bzl  toolchain.bzl
language/hlsl/: BUILD  lang.go
slang/: rules.bzl  shader.bzl  toolchain.bzl
tools/: update_versions.py
vulkan/: BUILD  defs.bzl  extensions.bzl  providers.bzl  rules.bzl  toolchains.bzl
vulkan/internal/: install.bzl
vulkan/private/: BUILD  common.bzl  download.bzl  glsl.bzl  hlsl.bzl  install.bzl  resolve.bzl  shader_group.bzl  slang.bzl  spirv_cross.bzl  template.BUILD  versions.bzl  versions.json
vulkan/private/tools/: update_versions.py
vulkan/tests/: versions_tests.bzl
