module(name = "hello")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_vulkan", version = "0.1")
local_path_override(
    module_name = "rules_vulkan",
    path = "../..",
)

vulkan_sdk = use_extension("@rules_vulkan//vulkan:extensions.bzl", "vulkan_sdk")
vulkan_sdk.download(version = "1.4.313.0")
use_repo(vulkan_sdk, "vulkan_sdk_1.4.313.0")

register_toolchains("@vulkan_sdk_1.4.313.0//:all")
